--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 
 
-  <script src="app.js"></script>
+  <!--<script src="app.js"></script>-->
   <script src="appes6.js"></script>
 </body>
 </html>
